--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
 	"homepage": "https://github.com/not-only-code/marionette-forms",
 	"private": false,
 	"license": "MIT",
+	"scripts": {
+		"install": "node_modules/.bin/bower install"
+	},
 	"keywords": [
 		"backbone",
 		"plugin",
@@ -29,6 +32,7 @@
 		"grunt-contrib-copy": "~0.5.0",
 		"grunt-contrib-uglify": "~0.5.1",
 		"grunt-contrib-concat": "~0.5.0",
-		"grunt-contrib-watch": "~0.6.1"
+		"grunt-contrib-watch": "~0.6.1",
+		"grunt-contrib-jasmine": "~0.8.0"
 	}
 }
