--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,7 @@
     ],
     "dependencies": {
         "jquery": ">=1.11.1",
-        "underscore": ">=1.6.0",
+        "underscore": "1.6.0",
         "backbone": ">=1.1.2",
         "marionette": "~2.1.0"
     },
